--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>
-			Budg-It
-		</title>
-		<link rel="icon" type="image/png" href="/images/favicon.png"/>
-		<link rel="stylesheet" type="text/css" href="/dist/styles.css" />
-	</head>	
-	<body>
-		<div id="app"></div>
-		<script src="/dist/bundle.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Budg-It</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="/dist/main.css" />
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
